# prodrocket-rs

./: .env  Cargo.toml
src/: connpool.rs  main.rs  models.rs  schema.rs  sql.rs  uuid_wrapper.rs
