[package]
authors = ["Tobias Schottdorf <tobias.schottdorf@gmail.com>"]
name = "prodrocket"
version = "0.1.0"

[dependencies]
diesel_codegen = "0.16.0"
dotenv = "0.10.1"
error-chain = "0.11.0"
postgres = "0.15.1"
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
r2d2_postgres = "0.13.0"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rocket_contrib = "0.3.2"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
uuid = "0.5.1"

[dependencies.diesel]
features = ["postgres"]
version = "0.16.0"
